--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -28,7 +28,7 @@ twocolumn,
 \newcolumntype{N}{>{\centering\arraybackslash}m{.9cm}}
 \newcolumntype{M}{>{\centering\arraybackslash}m{1.0cm}}
 \newcolumntype{Z}{>{\centering\arraybackslash}m{1.6cm}}
-\newcolumntype{Y}{>{\centering\arraybackslash}m{2.3cm}}
+\newcolumntype{Y}{>{\centering\arraybackslash}m{1.6cm}}
 \usepackage{multirow}
 
 % auto break lines
@@ -99,7 +99,7 @@ In this paper, we have analysed how well different measures of model uncertainty
 To do so, we have used graph-based neural network architectures that are adapted to provide subjective opinions (as described in the field of belief or evidence theory \cite{Josang2018}) through the use of Dirichlet distribution parameterizations \cite{Kipf2017, ZhaoXujiang2020}.
 Adopting such a method for performing multimodal classification of remote sensing data is, to the best of our knowledge, an as-yet untested approach. The performance of the adopted technique represents a promising avenue in the search for meaningful uncertainty estimates when performing multimodal remote sensing classification.
 
-The remainder of this paper is organised as follows: Section \ref{sec::unc_framework} describes the uncertainty framework adopted in the methods presented, Section \ref{sec::networks} details the construction of the graph-based neural networks used, Section \ref{sec::results} presents an analysis of results and Section \ref{sec::conclusion} summarises and draws conclusions as well as suggests areas for future work.
+The remainder of this paper is organised as follows: Section \ref{sec::unc_framework} describes the uncertainty framework adopted in the methods presented, Section \ref{sec::GraphNetworkArchitecture} details the construction of the graph-based neural networks used, Section \ref{sec::results} presents an analysis of results and Section \ref{sec::conclusion} summarises and draws conclusions as well as suggests areas for future work.
 
 \section{Uncertainty framework}
 \label{sec::unc_framework}
@@ -114,12 +114,8 @@ For an output, $\mathbf{y}$, of dimension K
 \begin{equation}
     \mathbf{b}\in\mathbb{R}^K,\quad\mathbf{a}\in\mathbb{R}^K,\quad\mathbf{y}\in\mathbb{R}^K.
 \end{equation}
-A projection of $\omega$ onto a probability distribution can be made according to
-\begin{equation}
-    P(y=k) = b_k + a_ku.
-\label{eq:prob_projection}
-\end{equation}
-Given that for the base rate vector $\sum_{k=1}^Ka_k=1$, an additivity requirement is described by
+A projection of $\omega$ onto a probability distribution can be made according to $P(y=k) = b_k + a_ku$.
+It follows that since $\sum_{k=1}^Ka_k=1$ for the base rate vector, an additivity requirement is described by
 \begin{equation}
     u+\sum_{k=1}^K b_k=1.
 \end{equation}
@@ -183,9 +179,11 @@ The epistemic uncertainty, therefore, is given by the difference between these t
 \end{equation}
 In order to compute the above expressions for aleatoric and epistemic uncertainty, the posterior distribution over models is approximated by samples obtained using dropout inference \cite{Gal2016}.
 
-\section{Networks}
-\label{sec::networks}
-The problem involves a graph with $N$ nodes described by an adjacency matrix $\mathbf{A}\in\mathbb{R}^{N\times N}$ and node features $\mathbf{X}\in\mathbb{R}^{N\times C}$, where $C$ denotes the number of channels in the input describing each node.
+\section{Graph network architecture}
+\label{sec::GraphNetworkArchitecture}
+The multimodal data can be represented using a graph, where each of the $N$ nodes in the graph represents a pixel in the image.
+The graph's adjacency matrix, $\mathbf{A}\in\mathbb{R}^{N\times N}$, is used to represent edges between nodes deemed similar.
+A set of features, $\mathbf{X}\in\mathbb{R}^{N\times C}$, is used to assign a vector description of each graph node, where $C$ denotes the number of input features.
 The graph's degree matrix, $\mathbf{D}\in\mathbb{R}^{N\times N}$, is a diagonal matrix with elements given by $\mathbf{D}_{ii}=\sum_j\mathbf{A}_{ij} $.
 
 The graph convolutional networks used are of the form proposed by \cite{Kipf2017}, where the graph convolutional layer is given by
@@ -197,9 +195,11 @@ where $\mathbf{Z}^{(l)}$, $\mathbf{Z}^{(l+1)}$ and $\boldsymbol{W}^{(l)}$ are th
 For brevity, the tilde operator is used to represent the inclusion of self-connection edges in the graph, i.e. $\tilde{\mathbf{A}}=\mathbf{A}+\mathbf{I}$ and $\tilde{\mathbf{D}}=\mathbf{D}+\mathbf{I}$.
 
 \subsection{Subjective models}
-In order to obtain models which will give node-level Dirichlet distribution parameters, the softmax output activation function used in a GCN is substituted for a ReLU function.
+An adaptation to the GCN architecture used by \cite{Kipf2017} must be made in order to obtain subjective opinions that will be used to obtain measures of vacuity and dissonance uncertainty.
+The adaptation made means that the model will output node-level Dirichlet distribution parameters, such that the output will provide a probability distribution over multinomial class probabilities for each node.
+To do so, the softmax output activation function used in the output layer of the GCN is substituted for a ReLU function.
 In this way, the model is trained to output non-negative evidence contributions, $\mathbf{E}\in\mathbb{R}^{N\times K}$, where $\mathbf{E}_{i} = \boldsymbol{\alpha}_{i}-\mathbf{1}$ and $\boldsymbol{\alpha}_{i}$ refers to the K-dimensional concentration parameters of the $\text{i}^\text{th}$ node.
-In order to train an evidential model, the loss function is made up of two components; a squared error term which is minimised in order to classify a greater proportion of the nodes correctly and a variance term which is minimized to incentivize the model to provide confident predictions where possible.
+In order to train such a model, the loss function is made up of two components; a squared error term which is minimised in order to classify a greater proportion of the nodes correctly and a variance term which is minimized to incentivize the model to provide confident predictions where possible.
 This loss, $\mathcal{L}(\boldsymbol{\theta})$, is given by
 \begin{equation}
 \begin{split}
@@ -218,7 +218,7 @@ These methods have been shown to allow subjective models to provide better uncer
 By training a non-subjective model in advance, its outputs, $\hat{p}_{ik}$, can be used in order to encourage the subjective model to converge to node Dirichlet distributions with $\mathbb{E}[p_{ik}]$ which are close to the teacher's deterministic estimates.
 This is achieved using an additional term in the loss function,
 \begin{equation}
-    \mathcal{L}_{\text{``-T''}}(\boldsymbol{\theta})=\sum_i\sum_k\left(\hat{p}_{ik}\log\frac{\hat{p}_{ik}}{\mathbb{E}[p_{ik}]}\right),
+    \mathcal{L}_{\text{T}}(\boldsymbol{\theta})=\sum_i\sum_k\left(\hat{p}_{ik}\log\frac{\hat{p}_{ik}}{\mathbb{E}[p_{ik}]}\right),
 \end{equation}
 which corresponds to the summation of KL-divergence terms between the teacher output probability and the expected value of the subjective model's Dirichlet distribution for each node, $\sum_i\infdiv{\hat{p}_{ik}}{\mathbb{E}[p_{ik}]}$.
 Notice that this sum is computed over all nodes as opposed to just the nodes in $\mathbb{L}$.
@@ -240,22 +240,20 @@ The total evidence to suggest the $\text{i}^\text{th}$ node belongs to the $\tex
 \begin{equation}
     \hat{\boldsymbol{\alpha}}_{ik}=1+e_{ik}=1+\sum_{j\in\mathbb{L}}h_{ik}(y_j, d_{ij}).
 \end{equation}
-A node which is far from all observed nodes, i.e. $h_{ik}(y_j,d_{ij})\approx0, \forall j\in\mathbb{L}$, will mean that $\hat{\boldsymbol{\alpha}}_{i}\approx\mathbf{1}$.
-The prior's Dirichlet strength for the $\text{i}^\text{th}$ node, $\hat{S}_i$, will therefore be approximately $K$ and the node's vacuity, as given by (\ref{eq::vacuity}), will be approximately 1.
-On the other hand, a node which is near to many observed nodes will have large $\hat{S}_i$ and node vacuity will be small.
 The KL-divergence between the Dirichlet distribution of the prior and the model output can be incorporated into the loss function using the term
 \begin{equation}
-    \mathcal{L}_{\text{``-K''}}(\boldsymbol{\theta})=\sum_i\infdiv{\text{Dir}(\mathbf{p}_i\vert\boldsymbol{\alpha}_i)}{\text{Dir}(\hat{\mathbf{p}}_i\vert\hat{\boldsymbol{\alpha}}_i)},
+    \mathcal{L}_{\text{K}}(\boldsymbol{\theta})=\sum_i\infdiv{\text{Dir}(\mathbf{p}_i\vert\boldsymbol{\alpha}_i)}{\text{Dir}(\hat{\mathbf{p}}_i\vert\hat{\boldsymbol{\alpha}}_i)},
 \label{eq::teacher_loss}
 \end{equation}
-which can be incorporated into the total loss.
+which can, in turn, be incorporated into the total loss.
 Models trained using a prior are denoted using the ``-K'' suffix e.g. a S-BGCN-K model would indicate that the graph convolutional network was trained with a loss function using a weighted combination of the loss in (\ref{eq:core_loss}) and the term described in (\ref{eq::teacher_loss}).
 
 Table \ref{loss_table} shows how these convergence assistance techniques can be weighted and combined in various permutations to provide a total loss function, $\mathcal{L}_\text{total}(\boldsymbol{\theta})$, as well as the model name abbreviations used to denote which combination has been used.
-The coefficients $\lambda_{\text{``-T''}}$ and $\lambda_{\text{``-K''}}$ are used to control the relative importance of the teacher network and the Dirichlet prior respectively against the importance of the subjective loss function given in (\ref{eq:core_loss}).
-These are considered hyperparameters of the model which are to be tuned during training.
+The coefficients $\lambda_{\text{T}}$ and $\lambda_{\text{K}}$ are used to control the relative importance of the teacher network and the Dirichlet prior respectively against the importance of the subjective loss function given in (\ref{eq:core_loss}).
+These have been considered as hyperparameters which are to be tuned during training.
 
 \begin{table}
+\scriptsize
 \renewcommand{\arraystretch}{1.5}
 \caption{Loss function components and their weighting coefficients for different model types}
 \label{loss_table}
@@ -265,9 +263,9 @@ These are considered hyperparameters of the model which are to be tuned during t
 \bfseries Model name & \bfseries $\mathcal{L}_{\text{total}}(\boldsymbol{\theta})$\\
 \hline
 S-BGCN & $\mathcal{L}(\boldsymbol{\theta})$ \\
-S-BGCN-T & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{``-T''}}\mathcal{L}_{\text{``-T''}}(\boldsymbol{\theta})$ \\
-S-BGCN-K & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{``-K''}}\mathcal{L}_{\text{``-K''}}(\boldsymbol{\theta})$ \\
-S-BGCN-T-K & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{``-T''}}\mathcal{L}_{\text{``-T''}}(\boldsymbol{\theta})+\lambda_{\text{``-K''}}\mathcal{L}_{\text{``-K''}}(\boldsymbol{\theta})$ \\
+S-BGCN-T & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{T}}\mathcal{L}_{\text{T}}(\boldsymbol{\theta})$ \\
+S-BGCN-K & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{K}}\mathcal{L}_{\text{K}}(\boldsymbol{\theta})$ \\
+S-BGCN-T-K & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{T}}\mathcal{L}_{\text{T}}(\boldsymbol{\theta})+\lambda_{\text{K}}\mathcal{L}_{\text{K}}(\boldsymbol{\theta})$ \\
 \hline
 \end{tabular}
 \end{table}
@@ -276,19 +274,19 @@ S-BGCN-T-K & $\mathcal{L}(\boldsymbol{\theta})+\lambda_{\text{``-T''}}\mathcal{L
 \label{sec::results}
 \subsection{Data}
 A subsection of the 2018 IEEE GRSS Data Fusion Challenge dataset was selected for the purposes of validating the described methods as a means for obtaining uncertainty aware classifications.
-The modes of data collected come from three sensor types: LiDAR, optical and hyperspectral (HS).
+The ground truth labels in this dataset describe 20 different urban land cover/land use classes (i.e. $K=20$) as well as an unlabelled state, described as Unclassified.
+The modes of input data represent measurements from three sensor types: LiDAR, optical and hyperspectral (HS).
 The LiDAR data was provided at $0.5$ m resolution, the same resolution as the ground truth labels (GT).
 In order to simplify analysis, the optical data (which was provided at $0.05$ m resolution) and the HS data (which was provided at $1.0$ m resolution) were bilinearly resampled to obtain $0.5$ m resolution across inputs and outputs.
 
-The graph was constructed with each $0.5$ m $\times$ $0.5$ m pixel representing a node in the graph.
+The graph was constructed with each $0.5$ m $\times$ $0.5$ m pixels representing a node in the graph.
 Each node has a 52-dimensional feature vector (produced by stacking 3 optical channels, 48 HS channels and 1 LiDAR channel) describing it.
 The graph edges are computed using a $k$-nearest neighbors algorithm with two nodes receiving an edge connecting them if either node was one of the $k$ nodes which were nearest the other.
 This produces a graph which is both undirected and unweighted.
 The graph, which contains approximately 2.16 million nodes, was computed with $k=15$.
 
-The ground truth labels describe 20 different urban land cover/land use classes as well as an unlabelled state, described as Unclassified.
-The exact types and abundances of these classes can be found in Table \ref{tab::classes}.
-The classes which do not appear in the subsection of the dataset but exist within the wider GT are included for completeness.
+% The exact types and abundances of these classes can be found in Table \ref{tab::classes}.
+% The classes which do not appear in the subsection of the dataset but exist within the wider GT are included for completeness.
 
 % \begin{table}
 % % \renewcommand{\arraystretch}{1.5}
@@ -326,8 +324,8 @@ The classes which do not appear in the subsection of the dataset but exist withi
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=\columnwidth]{figures/gt.jpg}
-\caption{Ground truth data with colors depicting land cover classes. The subset area of the 2018 IEEE GRSS Data Fusion Challenge dataset covers the region with lower-left coordinate 272956, 3289689 and upper-right coordinate 273856, 3290290 (coordinates given in the NAD83 / UTM zone 15N Coordinate Reference System).}
+\includegraphics[width=.7\columnwidth]{figures/gt.jpg}
+\caption{Ground truth data with colors depicting land cover classes. This data represents a subset of the 2018 IEEE GRSS Data Fusion Challenge dataset.}
 \label{fig::gt}
 \end{figure}
 
@@ -354,7 +352,7 @@ The kernel weights of the first graph convolutional layer were regularized using
 Where dropout inference has been used, the number of samples taken, $M$, was 100.
 
 Hyperparameters including the learning rate, the $L_2$ regularization coefficient and the number of GCN layer output features, $F$, were selected via a grid-search method.
-Where used, $\lambda_{\text{``-T''}}$ and $\lambda_{\text{``-K''}}$ were also found using a grid-search.
+Where used, $\lambda_{\text{T}}$ and $\lambda_{\text{K}}$ were also found using a grid-search.
 
 Learning was performed for a maximum of 400 epochs, but was stopped early if the validation loss failed to decrease further for 60 consecutive epochs.
 If stopped early, model weights were returned to the settings which provided the lowest validation set loss upon the termination of training.
@@ -366,23 +364,16 @@ Benchmark models presented include the `vanilla' GCN (which can provide uncertai
 \subsection{Misclassification detection}
 
 Given that model uncertainties should provide a measure of the confidence which can be had about a model's predictions, a worthwhile estimate of uncertainty should be able to distinguish model misclassifications from accurate classifications.
-In order to measure a uncertainty output's ability to separate misclassifications, an experiment which produces a receiver operating characteristic (ROC) curve can be performed.
-By plotting the true positive rate (the proportion of misclassified nodes correctly flagged as misclassifications) against the false positive rate (the proportion of correctly classified nodes which were incorrectly flagged as misclassified) for various threshold values of the uncertainty metric, the ROC curve can be used to illustrate how well the uncertainty metric can separate the model's misclassifications.
-The area under the ROC curve (AUROC) can be used as a single numerical representation of the ROC figure, where a perfect discriminator would have an AUROC of $1.0$.
-An alternative measure of how well the uncertainty metric separates misclassified nodes is provided by considering the precision-recall (PR) curve, which plots the proportion of nodes which were detected as misclassifications which were actually misclassified nodes (precision) against the proportion of actually misclassified nodes which were detected as misclassifications (recall).
-Again, the area under the PR curve (AUPR) can be used as a single numerical summary of this relationship, and a perfect discriminator would have an AUPR of $1.0$.
+In order to measure a uncertainty output's ability to separate misclassifications, a receiver operating characteristic (ROC) curve and a precision-recall (PR) curve can be computed.
+The area under the ROC curve and PR curve (AUROC and AUPR respectively) can be used as a single numerical representation of the detection performance, where an area of $1.0$ would represent a perfect discriminator for both metrics.
 
-Models of each type described (as well as benchmark models) were trained and their outputs analysed in order to assess which model types as well as which of their uncertainty measures were best able to distinguish misclassified nodes.
-This was done by comparing the output labels for the test nodes to the respective test nodes' GT labels in order to separate correctly and incorrectly classified nodes.
-Each uncertainty metric in turn was then used to measure ROC and PR curve values for various threshold uncertainty metric values and the area under these curves subsequently calculated.
-
-The AUROC and AUPR values measured for the task of misclassification detection can be seen in Table \ref{tab::misc_auroc}. 
+Models of each type described (as well as benchmark models) were trained and their outputs analysed in produce the AUROC and AUPR values seen in Table \ref{tab::misc_auroc}. 
 
 \begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
 \caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by AUROC and AUPR).}
 \label{tab::misc_auroc}
-\small
+\scriptsize
 \begin{center}
 \begin{tabular}{Y|ccccc|ccccc}
 \hline
@@ -404,7 +395,7 @@ Drop-GCN & - & - &$0.897$&$0.552$&$0.887$&-&-&$0.619$&$0.243$&$0.600$  \\ \hline
 % \renewcommand{\arraystretch}{1.3}
 % \caption{Misclassification detection: Ability of each uncertainty type to detect misclassifications (measured by the AUPR metric).}
 % \label{tab::misc_aupr}
-% \small
+% \scriptsize
 % \begin{center}
 % \begin{tabular}{cccccc}
 % \hline
@@ -427,9 +418,9 @@ The performance seen for the S-BGCN-T-K model trained using the superpixel prior
 
 \subsection{Out of distribution detection}
 
-A lack of confidence held about the model's prediction might also arise if it receives an input which belongs to a distribution other than the distributions seen during training.
+It would also be reasonable to expect that uncertainty should be higher when the model is asked to make a prediction using an input which does not resemble the inputs upon which it was trained.
 The relative inability of neural networks' to successfully extrapolate beyond the support of the training data is a well-known weakness of these methods \cite{Lakshminarayanan2017}.
-By training models using only a subset of the classes provided by the GT, with the other classes acting as out of distribution (OOD) samples, an analysis of whether the uncertainty metrics are capable of distinguishing OOD nodes can be performed.
+By training models using only a subset of the classes provided by the GT, with the other classes acting as out of distribution (OOD) samples, the OOD detection ability of the uncertainty metrics can be measured.
 Using the same approach as described for misclassification detection, the AUROC and AUPR can be calculated for each uncertainty output provided by each model type, in order to determine the relative performance of the respective metrics for this task.
 
 In the results presented, two classes were randomly selected to act as OOD.
@@ -441,7 +432,7 @@ The AUROC and AUPR values measured can be found in Table \ref{tab::ood_auroc} an
 \renewcommand{\arraystretch}{1.3}
 \caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUROC metric). Values shown represent the mean $\pm$ standard deviation.}
 \label{tab::ood_auroc}
-\small
+\scriptsize
 \begin{center}
 \begin{tabular}{Yccccc}
 \hline
@@ -463,7 +454,7 @@ Drop-GCN & - & - &$0.541\pm0.185$&$0.420\pm0.161$&$0.538\pm0.187$    \\ \hline
 \renewcommand{\arraystretch}{1.3}
 \caption{OOD detection: Ability of each uncertainty type to detect OOD nodes (measured by the AUPR metric). Values shown represent the mean $\pm$ standard deviation.}
 \label{tab::ood_aupr}
-\small
+\scriptsize
 \begin{center}
 \begin{tabular}{Yccccc}
 \hline
